test/syntax-errors/test_instructions1.sos
# test_instruction operateur1 invalide

until test -nop "2" do
	i = 8
done